fix: dark mode

--- a/styles/arrow.styl
+++ b/styles/arrow.styl
@@ -7,16 +7,16 @@
   &.up
     border-left 4px solid transparent
     border-right 4px solid transparent
-    border-bottom 6px solid $textColorSub
+    border-bottom 6px solid var(--text-color-sub)
   &.down
     border-left 4px solid transparent
     border-right 4px solid transparent
-    border-top 6px solid $textColorSub
+    border-top 6px solid var(--text-color-sub)
   &.right
     border-top 4px solid transparent
     border-bottom 4px solid transparent
-    border-left 6px solid $textColorSub
+    border-left 6px solid var(--text-color-sub)
   &.left
     border-top 4px solid transparent
     border-bottom 4px solid transparent
-    border-right 6px solid $textColorSub
+    border-right 6px solid var(--text-color-sub)
