--- a/styles/mode.styl
+++ b/styles/mode.styl
@@ -13,6 +13,7 @@
   --box-shadow $boxShadow
   --box-shadow-hover $boxShadowHover
   --text-color $textColor
+  --text-color-sub $textColorSub
   --border-color $borderColor
   --code-color $codeColor
   --mask-color $maskColor
@@ -31,6 +32,7 @@
     --box-shadow $boxShadowDark
     --box-shadow-hover $boxShadowHoverDark
     --text-color $textColorDark
+    --text-color-sub $textColorSubDark
     --border-color $borderColorDark
     --code-color $codeColorDark
     --mask-color $maskColorDark
