--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -188,7 +188,7 @@ th, td
 
 .iconfont
   font-size: 0.9rem;
-  color: $textColorSub;
+  color: var(--text-color-sub);
 
 /************** 滚动条 **************/
 ::-webkit-scrollbar
